syntax = "proto3";

message WriteFlagLogsRequest {
  repeated bytes flag_assigned = 1;

  bytes telemetry_data = 2;

  repeated bytes client_resolve_info = 3;
  repeated bytes flag_resolve_info = 4;
}
